--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=facturacion-vinilos
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/facturacion-vinilos
+spring.datasource.username=root
+spring.datasource.password=a1b2c3
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
