custom-data.sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/facturacion-albumes
 spring.datasource.username=root
 spring.datasource.password=a1b2c3
 
+#Comento para cargar datos mediante script SQL
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.jpa.hibernate.ddl-auto=none
+#spring.sql.init.schema-locations=classpath:sql/custom-data.sql
+#spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
